// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commentMenu renders correctly 1`] = `
<PopupMenuButton
  actions={
    Array [
      Array [
        "Delete Comment",
        [MockFunction],
      ],
    ]
  }
  destructiveButtonIndex={-1}
  hitSlop={
    Object {
      "bottom": 10,
      "left": 0,
      "right": 15,
      "top": 20,
    }
  }
>
  <Icon
    name="More"
  />
</PopupMenuButton>
`;

exports[`renders correctly 1`] = `
<TouchableOpacity>
  <View>
    <TouchableOpacity
      onPress={[Function]}
    >
      <Avatar
        avatarUrl="foo.png"
      />
    </TouchableOpacity>
    <View>
      <View>
        <View>
          <TouchableOpacity
            onPress={[Function]}
          >
            <Text>
              Ishamel
            </Text>
          </TouchableOpacity>
          <Text>
            
          </Text>
        </View>
        <View>
          <CommentMenu
            menuItems={
              Object {
                "deleteComment": Object {
                  "action": undefined,
                  "destructive": true,
                  "label": "Delete Comment",
                },
                "editComment": Object {
                  "action": undefined,
                  "label": "Edit Comment",
                },
                "removeComment": Object {
                  "action": undefined,
                  "destructive": true,
                  "label": "Remove Comment",
                },
                "replyComment": Object {
                  "action": undefined,
                  "label": "Reply",
                },
              }
            }
          />
        </View>
      </View>
      <Memo
        html="tick followed tock followed tick followed tock"
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`shows the post title when displayPostTitle is true 1`] = `
<TouchableOpacity>
  <View>
    <TouchableOpacity
      onPress={[Function]}
    >
      <Avatar
        avatarUrl="foo.png"
      />
    </TouchableOpacity>
    <View>
      <View>
        <View>
          <TouchableOpacity
            onPress={[Function]}
          >
            <Text>
              Ishamel
            </Text>
          </TouchableOpacity>
          <Text>
            
          </Text>
          <Text>
            on "
            What's good? A long enough post title …
            "
          </Text>
        </View>
        <View>
          <CommentMenu
            menuItems={
              Object {
                "deleteComment": Object {
                  "action": undefined,
                  "destructive": true,
                  "label": "Delete Comment",
                },
                "editComment": Object {
                  "action": undefined,
                  "label": "Edit Comment",
                },
                "removeComment": Object {
                  "action": undefined,
                  "destructive": true,
                  "label": "Remove Comment",
                },
                "replyComment": Object {
                  "action": undefined,
                  "label": "Reply",
                },
              }
            }
          />
        </View>
      </View>
      <Memo
        html="tick followed tock followed tick followed tock"
      />
    </View>
  </View>
</TouchableOpacity>
`;
